# GB2MID

./: .gitignore  BUILD.md  CMakeLists.txt  Compile format.txt  GAMELIST.XML  GB2MID supported games.txt  GB2MID.C  GB2MID.H  GB2MID.sln  GB2MID.vcxproj  GB2MID.vcxproj.filters  GBMLIB.idb  GBMLIB.lib  MAKE.C  MAKE.H  MCOOKSEY.H  MusicBox format.txt  README.md  SHARED.C  Supported games.txt  TARANTLA.H  XML.C  ZLIB.H  archOn Player format.txt
GBMLIB/: ACT.C  ACT.H  AICOM.C  AICOM.H  AJG.C  AJG.H  ALLEYWAY.C  ALLEYWAY.H  ALTRON.C  ALTRON.H  ARCHON.C  ARCHON.H  ATLUS.C  ATLUS.H  AUDIOART.C  AUDIOART.H  BEAM.C  BEAM.H  BGDEC.C  BGDEC.H  BIONIC.C  BIONIC.H  BITS format.txt  BITS.C  BITS.H  CANNON.C  CANNON.H  CAPCOM.C  CAPCOM.H  CARILLON.C  CARILLON.H  CLIMAX.C  CLIMAX.H  CODEMONK.C  CODEMONK.H  COMPILE.C  COMPILE.H  COSMIGO.C  COSMIGO.H  CUBE.C  (+165 more)
Info/: ACT Japan format.txt  Aicom format.txt  Alberto Jose Gonzalez format.txt  Altron format.txt  Atlus format.txt  AudioArts Format.txt  Beam Software format.txt  Cannon Fodder sample format.txt  Capcom (DuckTales) format.txt  Capcom format.txt  Carillon Player format.txt  Compile format.txt  Cosmigo format.txt  Culture Brain format.txt  DSEQ format.txt  Data East format.txt  David Shea format.txt  David Whittaker format.txt  Digital Eclipse (Jeremy Mikas) format.txt  Ed Magnin format.txt  Ei-How Yang format.txt  Factor 5 format.txt  Junichi Saito format.txt  Karma Studios format.txt  Kemco format.txt  Konami (KCE Japan) format.txt  Konami (KCE Kobe) format.txt  Konami (KCE Osaka) format.txt  Kouji Murata format.txt  (+27 more)
